--- a/custom_components/aldesconnect/translations/fr.json
+++ b/custom_components/aldesconnect/translations/fr.json
@@ -2,8 +2,8 @@
     "config": {
         "step": {
             "user": {
-                "title": "Blueprint",
-                "description": "Si vous avez besoin d'aide pour la configuration, regardez ici: https://github.com/custom-components/integration_blueprint",
+                "title": "AldesConnect",
+                "description": "Si vous avez besoin d'aide pour la configuration, regardez ici: https://github.com/guix77/homeassistant-aldesconnect",
                 "data": {
                     "username": "Identifiant",
                     "password": "Mot de Passe"
