--- a/custom_components/aldes/translations/en.json
+++ b/custom_components/aldes/translations/en.json
@@ -2,8 +2,8 @@
     "config": {
         "step": {
             "user": {
-                "title": "AldesConnect",
-                "description": "If you need help with the configuration have a look here: https://github.com/guix77/homeassistant-aldesconnect",
+                "title": "Aldes",
+                "description": "If you need help with the configuration have a look here: https://github.com/guix77/homeassistant-aldes",
                 "data": {
                     "username": "Username",
                     "password": "Password"
